heimdall-media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-media        # < name of the deployment
  namespace: heimdall-media   # < namespace where place the deployment and pods
  labels:
    app: heimdall-media       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: heimdall-media
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: heimdall-media
    spec:
      volumes:
      - name: heimdall-media-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/heimdall-media-config # < pvc name we created in the previous yaml
      - name: heimdall-media-ssl
        secret:
          secretName: olympus-mangelschots-org-tls # < the name ssl certificate, will be created in the ingress yaml
      containers:
      - image: ghcr.io/linuxserver/heimdall # < the name of the docker image we will use
        name: heimdall-media                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "3000" # < group "user"
        - name: PUID
          value: "3000" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        ports:                              # < the ports required (see container documentation)
         - containerPort: 80
           name: http-80
           protocol: TCP
         - containerPort: 443
           name: https-443
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config               # < mount location in the container
           name: heimdall-media-config               # < volumelabel configured earlier in the yaml file
           subPath: config                  # < subfolder in the nfs share to be mounted
