heimdall-media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-media-service    # < name of the service
  namespace: heimdall-media       # < namespace where place the deployment and pods
spec:
  selector:
    app: heimdall-media           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-80
      protocol: TCP
      port: 80
